# Rust-IoT-Gateway

./: .gitignore  Cargo.toml  README.md  gateway.toml
src/: app.rs  config.rs  dispatcher.rs  fanout.rs  http.rs  lib.rs  main.rs  metrics.rs  readiness.rs  sink.rs
src/domain/: event.rs  mod.rs
src/ingest/: handler.rs  mod.rs  types.rs
tests/: env_precedence.rs  readyz_shutdown.rs
