[package]
name = "Rust-IoT-Gateway"
version = "0.1.0"
edition = "2024"

[[bin]] 
name = "gateway" 
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
anyhow = "1"
config = "0.15.15"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.47", features = ["derive"] }
assert_cmd = "2.0.17"
predicates = "3.1.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
tower-http = { version = "0.6.6", features = ["trace"] }
axum-prometheus = "0.9.0"
nix = { version = "0.30.1", features = ["fs"] }

[dev-dependencies]
tempfile = "3.22.0"
