[package]
name = "Rust-IoT-Gateway"
version = "0.1.0"
edition = "2024"

[[bin]] 
name = "gateway" 
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
anyhow = "1"
config = "0.15.15"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.47", features = ["derive"] }
assert_cmd = "2.0.17"
predicates = "3.1.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
tower-http = { version = "0.6.6", features = ["trace", "limit"] }
axum-prometheus = "0.9.0"
nix = { version = "0.30.1", features = ["fs", "signal"] }
prometheus = "0.14.0"
once_cell = "1.21.3"
tempfile = "3.22.0"
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
wait-timeout = "0.2.1"
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["serde"] }
hyper = "1.7.0"
prometheus-client = "0.24.0"
metrics = "0.24.2"

[dev-dependencies]
tempfile = "3.22.0"
